--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -35,3 +35,5 @@ steps:
 
 images:
   - asia-southeast1-docker.pkg.dev/phonic-command-481007-c6/thuan-registry/thuan-security:$COMMIT_SHA
+options:
+  logging: CLOUD_LOGGING_ONLY
