--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -2,8 +2,8 @@
 spring.application.name=thuan-security
 
 # Datasource configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/security21?createDatabaseIfNotExist=true
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost:3306/thuan_db?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root1
 spring.datasource.password=1234
 
 # JPA and Hibernate configuration
