--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -2,7 +2,7 @@
 spring.application.name=thuan-security
 
 # Datasource configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/thuan_db?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://10.148.0.2:3306/thuan_db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root1
 spring.datasource.password=1234
 
