--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,16 +1,15 @@
 # Application name
 spring.application.name=thuan-security
 
-# Datasource configuration
-spring.datasource.url=jdbc:mysql://10.148.0.2:3306/thuan_db?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root1
-spring.datasource.password=1234
+# Datasource configuration (L?Y T? ENV)
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 
 # JPA and Hibernate configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-#842664999029-37rfokecesp89dg5j50mhfa4cnbi9jug.apps.googleusercontent.com
-##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
+
 # OAuth2 Client Configuration for Google
 spring.security.oauth2.client.registration.google.client-id=842664999029-37rfokecesp89dg5j50mhfa4cnbi9jug.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
@@ -26,5 +25,3 @@ spring.security.oauth2.client.provider.google.user-name-attribute=sub
 spring.ldap.embedded.ldif=classpath:test-server.ldif
 spring.ldap.embedded.base-dn=dc=springframework,dc=org
 spring.ldap.embedded.port=8389
-
-
